--- a/style.css
+++ b/style.css
@@ -66,10 +66,103 @@ body{
     font-size: 15px;
     font-family: 'League Spartan', sans-serif;
     background-color: var(--White);
-    background-image: url(./images/bg-pattern-top-desktop.svg) left top no-repeat, url(./images/bg-pattern-bottom-desktop.svg) right bottom no-repeat;
+    background-image: url(/images/bg-pattern-top-desktop.svg), url(/images/bg-pattern-bottom-desktop.svg);
+    background-position: left top, right bottom;
+    background-repeat: no-repeat;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     min-height: 100vh;
+}
+.container{
+    max-width: 65rem;
+}
+.productHeader{
+    display: flex;
+    margin-bottom: 3rem;
+    /* border: 1px solid red; */
+}
+.productDesc{
+    max-width: 22rem;
+}
+.productDesc h1{
+    color: var(--Very-Dark-Magenta);
+    font-size: 3rem;
+    font-weight: 700;
+    margin-bottom: 0.8rem;
+}
+.productDesc p{
+    color: var(--Dark-Grayish-Magenta);
+    line-height: 1.3;
+    font-weight: 400;
+}
+
+.productRating{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-left: 15rem;
+}
+.ratingCard{
+    background-color: var(--Light-Grayish-Magenta);
+    margin: 0.3rem auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 15px 20px;
+    width: 20rem;
+    border-radius: 0.5rem;
+}
+.ratingCard p{
+    color: var(--Very-Dark-Magenta);
+    font-weight: 500;
+}
+.ratingCard:nth-of-type(2){
+    transform: translate(2.5rem);
+}
+
+.ratingCard:nth-of-type(3){
+    transform: translate(5rem);
+}
+
+
+.reviewContainer{
+    display: flex;
+    margin-top: 5rem;
+}
+.reviewCard{
+    background-color: var(--Very-Dark-Magenta);
+    padding: 2.3rem;
+    border-radius: 0.5rem;
+    color: var(--White);
+}
+.reviewCard p{
+    margin-top: 1.3rem;
+}
+.reviewCard:nth-of-type(2){
+    margin: 0 1.5rem;
+    transform: translateY(1.5rem);
+}
+.reviewCard:nth-of-type(3){
+    transform: translateY(3rem);
+}
+.userProfile{
+    display: flex;
+    align-items: center;
+}
+.userProfile img{
+    width: 3rem;
+    border-radius: 1.5rem;
+    margin-right: 1.5rem;
+}
+.profileName{
+    line-height: 1.3;
+}
+.profileName span{
+    color: var(--Soft-Pink);
+}
+.userReview{
+    line-height: 1.3;
+    text-align: start;
 }
