--- a/style.css
+++ b/style.css
@@ -81,7 +81,6 @@ body{
 .productHeader{
     display: flex;
     margin-bottom: 3rem;
-    /* border: 1px solid red; */
 }
 .productDesc{
     max-width: 22rem;
@@ -165,4 +164,14 @@ body{
 .userReview{
     line-height: 1.3;
     text-align: start;
+}
+
+/* Design for Mobile */
+
+@media screen and (max-width:467px) {
+    body{
+        background-image: url(/images/bg-pattern-top-mobile.svg), url(/images/bg-pattern-bottom-mobile.svg);
+        background-position: left top, right bottom;
+        background-repeat: no-repeat;
+    }
 }
