--- a/style.css
+++ b/style.css
@@ -173,5 +173,45 @@ body{
         background-image: url(/images/bg-pattern-top-mobile.svg), url(/images/bg-pattern-bottom-mobile.svg);
         background-position: left top, right bottom;
         background-repeat: no-repeat;
+        min-height: 100vh;
+        align-items: center;
+    }
+    .container{
+        max-width: 25rem;
+        padding: 5rem 0;
+    }
+    .productHeader{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+    .productDesc{
+        max-width: 19rem;
+        text-align: center;
+        margin-bottom: 2rem;
+    }
+    .productDesc h1{
+        font-size: 2.5rem;
+    }
+    .productRating{
+        margin-left: 0;
+        align-items: center;
+    }
+    .ratingCard{
+        flex-direction: column;
+        width: 15rem;
+        line-height: 1.3;
+    }
+    .ratingCard:nth-of-type(2), .ratingCard:nth-of-type(3){
+        transform: none;
+    }
+    .reviewContainer{
+        flex-direction: column;
+        align-items: center;
+        margin-top: 2.5rem;
+    }
+    .reviewCard{
+        width: 15rem;
+        padding: 1.5rem;
     }
 }
